<resources>
    <string name="app_name">Radar</string>
    <string name="resume">Localizar</string>
    <string name="pause">Buscando...</string>
    <string name="gps_not_supported">Sin soporte de GPS</string>
    <string name="gps_set_location_listener">Iniciando GPS con intervalo = %1$ss, min. dist. = %2$sm</string>

    <string name="gps_latitude_label">Latitud:</string>
    <string name="gps_latitude_value">%1$.7f\u00B0</string>
    <string name="gps_longitude_label">Longitud:</string>
    <string name="gps_longitude_value">%1$.7f\u00B0</string>
    <string name="gps_fix_time_label">Time:</string>
    <string name="gps_ttff_label">TTFF:</string>
    <string name="gps_altitude_label">Altitud:</string>
    <string name="gps_altitude_value">%1$.1f m</string>
    <string name="gps_altitude_msl_label">Alt (MSL):</string>
    <string name="gps_altitude_msl_value">%1$.1f m</string>
    <string name="gps_accuracy_label">Precisión:</string>
    <string name="gps_accuracy_value">%1$.1f m</string>
    <string name="gps_speed_label">Speed:</string>
    <string name="gps_speed_value">%1$.1f m/sec</string>
    <string name="gps_bearing_label">Bearing:</string>
    <string name="gps_bearing_value">%1$.1f\u00B0</string>
    <string name="gps_num_sats_label"># Sats:</string>
    <string name="gps_num_sats_value">%1$d/%2$d</string>
    <string name="pdop_label">PDOP:</string>
    <string name="hvdop_label">H/V DOP:</string>
    <string name="hvdop_value">%1$.1f/%2$.1f</string>
    <string name="searching">Localizando</string>
    <string name="enable_gps_message">El GPS esta desabilitado. Habilitarlo ahora?</string>
    <string name="enable_gps_positive_button">Habilitar GPS</string>
    <string name="enable_gps_negative_button">No</string>
    <string name="saving">Guardando..</string>
    <string name="register">Registrar</string>
    <string name="canceling">Cancelando...</string>
    <string name="cancel">Cancelar</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyA24mC9OAkD08aAkO_UADkSOSxaCKUZFBQ
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="save">Guardar</string>
    <string name="add">Agregar</string>
    <string name="delete">Borrar</string>
    <string name="position_name">Nombre del punto de Control</string>
    <string name="init_new_watch">Iniciando nueva guardia...</string>
    <string name="position_saved">Posicion guardada!</string>
    <string name="si">SI</string>
    <string name="login">Login</string>
    <string name="finish_watch">Terminar Guardia</string>
    <string name="finish_watch_text_dialog">¿Seguro que desea terminar la guardia?</string>
    <string name="no">NO</string>
    <string name="select_message">selecciona el radar_export.json</string>
    <string name="file_no_found">Error\n\nNo se encontro el archivo radar_export.json en la carpeta databases</string>
    <string name="ok">OK</string>
    <string name="info_import">Si realiza un import la informacion previa almacenada sera borrada y reemplazada por la nueva</string>
    <string name="do_import">Importar</string>
    <string name="import_completed">Informacion actualiza con exito</string>
    <string name="title_login_guard">Ingreso de guardia</string>
    <string name="title_login_admin">Ingreso para administrador</string>
    <string name="user_login_error">Usuario incorrecto</string>
    <string name="password_login_error">Contrasena incorrecta</string>
    <string name="loading">Cargando...</string>
    <string name="login_error">Error de base de datos</string>
    <string name="introduce_user">Introduce tu usuario</string>
    <string name="introduce_password">Introduce tu contrasena</string>
    <string name="watch_finish">Guardia Finalizada</string>
    <string name="title_map">Mapa</string>
    <string name="title_register">Registro</string>
    <string name="much_control_position">mas de 1 punto de control cercano</string>
    <string name="near_of">Ubicado en</string>
    <string name="none_control_point">No hay puntos de control cercanos</string>
    <string name="without_register">Sin registros</string>
    <string name="this_user_dont_have_route">Este usuario no tiene ruta asignada</string>
    <string name="close_app">¿Seguro que deseas salir de la aplicacion?</string>
    <string name="close_user">¿Seguro que desea cerrar su usuario e ir al login?</string>
    <string name="warning_watch">Hay una guardia en curso, si continua la guardia que estaba en curso se perdera, ¿desea continuar?</string>
    <string name="warning">Advertencia</string>
    <string name="problem_for_location">Problemas para encontrar ubicacion</string>
    <string name="enabled_gps">GPS habilitado</string>
    <string name="disabled_gps">GPS desabilitado</string>
</resources>
