<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.GuardActivity">

    <FrameLayout
        android:id="@+id/principal_container"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_margin="@dimen/table_margin"
            android:layout_gravity="bottom|left"
            android:id="@+id/lat_long_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:id="@+id/latitude_label"
                    android:text="@string/gps_latitude_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dip"
                    style="@style/info_label"/>

                <TextView
                    android:id="@+id/latitude"
                    style="@style/info_value"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/longitude_label"
                    android:text="@string/gps_longitude_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dip"
                    style="@style/info_label"/>

                <TextView
                    android:id="@+id/longitude"
                    style="@style/info_value"/>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_margin="@dimen/table_margin"
            android:layout_gravity="bottom|right"
            android:id="@+id/alt_acc_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:id="@+id/altitude_label"
                    android:text="@string/gps_altitude_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dip"
                    style="@style/info_label"/>

                <TextView
                    android:id="@+id/altitude"
                    style="@style/info_value"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/accuracy_label"
                    android:text="@string/gps_accuracy_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dip"
                    style="@style/info_label"/>

                <TextView
                    android:id="@+id/accuracy"
                    style="@style/info_value"/>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_margin="@dimen/table_margin"
            android:layout_gravity="top|left"
            android:id="@+id/time_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:id="@+id/fix_time_label"
                    android:text="@string/gps_fix_time_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dip"
                    style="@style/info_label"/>

                <TextView
                    android:id="@+id/fix_time"
                    style="@style/info_value"/>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_margin="@dimen/table_margin"
            android:layout_gravity="top|right"
            android:id="@+id/speed_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:id="@+id/speed_label"
                    android:text="@string/gps_speed_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dip"
                    style="@style/info_label"/>

                <TextView
                    android:id="@+id/speed"
                    style="@style/info_value"/>
            </TableRow>

        </TableLayout>

    </FrameLayout>



</RelativeLayout>
