<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.guardias.yornel.gpslocation.app.MapFragment">

    <RelativeLayout
        android:id="@+id/container_radar"
        android:visibility="visible"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <RelativeLayout
            android:id="@+id/layout_main_searching"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/loading"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/searching"
                android:textSize="24dp"
                style="@style/info_label"/>

            <TextView
                android:id="@+id/loading_text"
                android:text="..."
                android:textSize="24dp"
                style="@style/info_label"
                android:layout_alignBaseline="@+id/loading"
                android:layout_alignBottom="@+id/loading"
                android:layout_toEndOf="@+id/loading" />

        </RelativeLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/layout_main_content"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <EditText
                android:id="@+id/place"
                android:hint="@string/position_name"
                android:layout_margin="16dp"
                android:background="@color/background"
                android:layout_width="350dp"
                android:layout_height="30dp" />

            <com.dd.CircularProgressButton
                android:id="@+id/circularButton"
                android:layout_width="150dp"
                android:layout_height="64dp"
                android:textColor="@color/cpb_white"
                android:textSize="18sp"
                app:cpb_cornerRadius="48dp"
                app:cpb_textComplete="Listo"
                app:cpb_textError="Error"
                app:cpb_textIdle="@string/add"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:layout_below="@id/container_radar"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:background="@drawable/button_like_location"
        android:layout_below="@id/container_radar"
        android:onClick="updateMapView"
        android:layout_marginTop="60dp"
        android:layout_marginRight="12dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/red_marker_24"
        android:layout_width="39dp"
        android:layout_height="39dp" />

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="6dp"
        android:layout_margin="6dp"
        android:id="@+id/container_position_details"
        android:visibility="gone"
        card_view:cardBackgroundColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="17dp"
                    android:layout_alignParentRight="true">

                    <Button
                        android:id="@+id/save"
                        android:text="@string/save"
                        android:layout_width="150dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="18dp"
                        android:background="@drawable/button_effect"
                        android:textColor="@color/cpb_white"
                        android:textSize="18sp" />

                    <com.dd.CircularProgressButton
                        android:id="@+id/delete"
                        android:layout_width="150dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="18dp"
                        android:textColor="@color/cpb_white"
                        android:textSize="18sp"
                        app:cpb_cornerRadius="48dp"
                        app:cpb_textComplete="Listo"
                        app:cpb_textError="Error"
                        app:cpb_textIdle="@string/delete" />

                </LinearLayout>

            </RelativeLayout>

            <ImageButton
                android:id="@+id/move"
                android:src="@drawable/move"
                android:layout_margin="12dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/button_effect"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:id="@+id/cancel"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:layout_margin="12dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?selectableItemBackground"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
